--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,3 +41,19 @@ h1 {
   }
 
 }
+
+
+/* Establecemos la cuadrícula con dos columnas */
+.grid-cols-sidebar-dashboard {
+  grid-template-columns: 130px 1fr; /* La primera columna tendrá 200px de ancho y la segunda ocupará el resto */
+}
+
+/* Establecemos el ancho fijo para Sidebar */
+.col-sidebar {
+  width: 130px;
+}
+
+/* Establecemos el ancho para Dashboard */
+.col-dashboard {
+  width: calc(100% - 200px); /* El ancho ocupará el 100% menos el ancho de la columna de Sidebar */
+}
