--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,52 +4,5 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #3730A3;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  background-color: #3730a3;
 }
-
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-}
-
-
-/* Establecemos la cuadrícula con dos columnas */
-.grid-cols-sidebar-dashboard {
-  grid-template-columns: 180px 1fr; 
-}
-
-/* Establecemos el ancho fijo para Sidebar */
-.col-sidebar {
-  width: 130px;
-}
-
